UserForm: prevent scrollbar in dense mode
Fit form to content to prevent a scrollbar. Set minimal height of HTML
field to height of generic avatar image.

--- a/code/contacts/org.eclipse.scout.contacts.ui.html/src/main/js/contacts/form/UserForm.less
+++ b/code/contacts/org.eclipse.scout.contacts.ui.html/src/main/js/contacts/form/UserForm.less
@@ -11,6 +11,7 @@
 
 .contacts-user-form {
   white-space: nowrap;
+  min-height: 110px;
 }
 
 .contacts-user-form-image {
